# RegiMon

./: .gitignore  README.md  index.html  loveletter.txt  package-lock.json  package.json
.github/workflows/: build-windows.yml
public/: registry-paths.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  registry_monitor.rs
src/components/: AdminBanner.jsx  ChangeCard.jsx  ChangesPanel.jsx  EmptyState.jsx  ErrorBanner.jsx  Header.jsx  KeyCard.jsx  KeysPanel.jsx  NavTabs.jsx  SettingsPanel.jsx
