[package]
name = "tauritest"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.52"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_System_Threading"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
